<resources>
    <string name="app_name">EducationalAdministrationSystem</string>
    <string name="action_settings">Settings</string>
    <string name="suggest">其他建议</string>
    <string name="str_username">用户名</string>
    <string name="str_pwd">密码</string>
    <string name="str_save_pwd">记住密码</string>
    <string name="str_login">登录</string>
    <string name="question7">问题7：老师的教学态度怎么样？</string>
    <string name="question8">问题8：老师的PPT内容怎么样？</string>
    <string name="question9">问题9：老师课堂氛围怎么样？</string>
    <string name="question10">问题10：老师与同学互动情况怎么样？</string>
    <!--第一题-->
    <string name="q7an1">A 优秀</string>
    <string name="q7an2">B 良好</string>
    <string name="q7an3">C 一般</string>
    <string name="q7an4">C 差劲</string>
    <!--第一题-->
    <string name="q8an1">A 优秀</string>
    <string name="q8an2">B 良好</string>
    <string name="q8an3">C 一般</string>
    <string name="q8an4">C 差劲</string>
    <!--第一题-->
    <string name="q9an1">A 优秀</string>
    <string name="q9an2">B 良好</string>
    <string name="q9an3">C 一般</string>
    <string name="q9an4">C 差劲</string>
    <!--第一题-->
    <string name="q10an1">A 优秀</string>
    <string name="q10an2">B 良好</string>
    <string name="q10an3">C 一般</string>
    <string name="q10an4">C 差劲</string>

</resources>
