<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/str_username"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/str_pwd"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/et_ver"
        android:layout_width="177dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="验证码"
        android:layout_marginTop="30dp"
    />
        <CheckBox
            android:id="@+id/cb_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/str_save_pwd"
            android:textSize="16dp"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/str_login"
            android:textSize="16dp"
            android:textColor="@android:color/white"
            android:background="@drawable/sl_btn_login"
            style="?android:attr/borderlessButtonStyle"
            />
    </LinearLayout>
</LinearLayout>